--- a/index.css
+++ b/index.css
@@ -7,6 +7,12 @@ body {
     background-size: 800px;
     font-family: 'PT Sans', sans-serif;
 }
+
+#myCanvas {
+    display:block;
+    margin: auto;
+}
+
 .header, .main-content {
     background-color: rgba(209, 213, 222, 0.9);
     margin: 20px 15%;
